where to next shop button

--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,10 @@ header ul li a img {
   width: 80%;
 }
 
+.wtn-shop-link {
+  background-color: #d42b29;
+}
+
 .wtn-writers-pad-img {
   width: 80%;
 }
